# yutome

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml  ytkb.toml  yutome.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
.claude/skills/ytkb-retrieval/: SKILL.md
.claude/skills/yutome-retrieval/: SKILL.md
.github/workflows/: release.yml
cloudflare/yutome-capsule/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  wrangler.toml
cloudflare/yutome-capsule/src/: account-grants.ts  account-signup.ts  contract.json  env.ts  icon-asset.ts  index.ts  pairing.ts  tenant-routing.ts  yutome-mcp-agent.ts  yutome-relay.ts
cloudflare/yutome-capsule/test/: account-signup.test.ts  node-builtins.d.ts  pairing-oauth-props.test.ts  tenant-routing.test.ts
docs/: README.md  ai-artifact-cleanup.md  cli-architecture.md  cloud-capsule-strategy.md  evals.md  hosted-glossary.md  hosted-provider-broker-plan.md  hosted-yutome-plan.md  oauth-testing.md  plan.md  product-design.md  proxy-strategy.md  query-api.md  remote-access.md  reviewer-handoff.md  ytdlp-webshare-decision-log.md
docs/architecture/: README.md  cli-and-engine.md  frontend.md  hosted-data-access-rfc.md  hosted-sql.md  hosted.md  mcp-capabilities.md  railway-ops.md
docs/architecture/diagrams/: README.md
docs/archive/: README.md  plan-pre-postgres-cutover.md  reviewer-handoff-pre-postgres-cutover.md
docs/issues/: ytdlp-webshare-402-sigabrt.md
scripts/: audit_ai_artifacts.py  benchmark_ytdlp_runtime.py
src/ytkb/: __init__.py  __main__.py  api.py  asr.py  channels.py  chunking.py  cli.py  config.py  db.py  embeddings.py  env.py  exports.py  gemini.py  hashing.py  http_server.py  indexer.py  maintenance.py  mcp_server.py  paths.py  quality.py  quality_llm.py  quality_upgrade.py  query.py  retrieval.py  store.py  transcripts.py  youtube.py  youtube_oauth.py
src/yutome/: __init__.py  __main__.py  api.py  asr.py  channels.py  chunking.py  cli.py  config.py  contract.py  contract_export.py  db.py  embeddings.py  env.py  evals.py  exports.py  gemini.py  http_server.py  indexer.py  maintenance.py  mcp_server.py  paths.py  quality.py  quality_heuristics.py  quality_llm.py  quality_upgrade.py  query.py  remote_connection.py  retrieval.py  runtime.py  search_presets.py  setup_prompts.py  sources.py  store.py  transcripts.py  youtube.py  youtube_import.py  youtube_oauth.py
src/yutome/cli/: __init__.py  _bridge.py  _legacy.py  _worker_deploy.py  actions.py  context.py  corpus.py  doctor.py  export.py  hosted.py  render.py  search.py  serve.py
src/yutome/hosted/: __init__.py  account.py  account_cleanup.py  account_cli.py  account_read.py  allocation_policy.py  allocations.py  api_keys.py  auth.py  auth_login.py  billing.py  cli_helpers.py  control_plane.py  email.py  entitlements.py  errors.py  events.py  gate.py  google_signin_service.py  http_api.py  ids.py  indexing.py  jobs.py  ledger.py  mcp_query.py  migrations.py  models.py  normalizers.py  postgres.py  provider_wrappers.py  rate_gate.py  repositories.py  resources.py  runtime.py  schema.py  search_store.py  source_import.py  source_registry.py  sqlalchemy_core.py  youtube_oauth_service.py
src/yutome/hosted/alembic/: env.py
src/yutome/hosted/alembic/versions/: 20260526_0001_hosted_fresh_baseline.py
tests/: _http_e2e_check.py  _mcp_e2e_check.py  _oauth_e2e_check.py  test_ai_artifact_audit.py  test_api.py  test_cli_surface.py  test_config_paths_db.py  test_contract_parity.py  test_documented_usage.py  test_error_surfaces.py  test_fts5_escape.py  test_hosted_account.py  test_hosted_account_cleanup.py  test_hosted_account_read.py  test_hosted_alembic.py  test_hosted_allocation_policy.py  test_hosted_allocations.py  test_hosted_auth_source_registry.py  test_hosted_billing.py  test_hosted_cli_account_api.py  test_hosted_cli_helpers.py  test_hosted_cli_user_flow.py  test_hosted_control_plane.py  test_hosted_email.py  test_hosted_embedding_integration.py  test_hosted_entitlements.py  test_hosted_gemini_integration.py  test_hosted_http_api.py  test_hosted_indexing_smoke.py  test_hosted_jobs.py  test_hosted_mcp_query.py  test_hosted_postgres.py  test_hosted_provider_wrappers.py  test_hosted_rate_gate.py  test_hosted_repositories.py  test_hosted_runtime_cli.py  test_hosted_search_store.py  test_hosted_usage.py  test_hosted_vectorchord.py  test_hosted_webshare_integration.py  (+14 more)
web/: README.md  package-lock.json  package.json  wrangler.jsonc
web/app/: root.tsx  routes.ts
web/app/components/: brand-logos.tsx  connect-guides.tsx  copy-field.tsx  mcp-menu.tsx  youtube-embed.tsx
web/app/components/ui/: progress.tsx
web/app/lib/: activity.ts  cookies.server.ts  env.server.ts  hosted-api.server.ts  redirect.ts  session.server.ts  utils.ts
web/app/routes/: auth.google.callback.tsx  auth.google.start.tsx  auth.verify.tsx  cli.authorize.tsx  dashboard.channel.$channelId.tsx  dashboard.connect.tsx  dashboard.home.tsx  dashboard.library.tsx  dashboard.search.tsx  dashboard.tsx  dashboard.video.$videoId.tsx  dashboard.youtube.callback.tsx  dashboard.youtube.start.tsx  google-search-console-verification.ts  home.tsx  privacy.tsx  signout.tsx  signup.tsx  terms.tsx
web/scripts/: dev_hosted_api.py  local-dev.sh
