[project]
name = "yutome"
version = "0.1.0"
description = "Local-first YouTube channel knowledge base indexer"
readme = "docs/plan.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8,<3",
    "rapidfuzz>=3.14.5",
    "typer>=0.12,<1",
    "wordfreq>=3.1.1",
]

[project.optional-dependencies]
ingest = [
    "curl-cffi>=0.11,<0.15",
    "yt-dlp>=2025.6.9",
    "youtube-transcript-api>=1.2",
]
vectors = [
    "lancedb>=0.20",
]
asr = [
    "faster-whisper>=1.1",
]
embeddings = [
    "voyageai>=0.3",
]
gemini = [
    "google-genai>=1.40",
]
mcp = [
    "mcp[cli]>=1.20,<2",
]
http = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]
all = [
    "curl-cffi>=0.11,<0.15",
    "yt-dlp>=2025.6.9",
    "youtube-transcript-api>=1.2",
    "lancedb>=0.20",
    "faster-whisper>=1.1",
    "voyageai>=0.3",
    "google-genai>=1.40",
    "mcp[cli]>=1.20,<2",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
yutome = "yutome.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yutome"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
