[project]
name = "yutome"
version = "0.1.3"
description = "A local transcript library for the YouTube channels you point at"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kifah Meeran", email = "contact@maskys.com" },
]
keywords = [
    "youtube",
    "knowledge-base",
    "transcripts",
    "search",
    "mcp",
    "rag",
    "local-first",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "pydantic>=2.8,<3",
    "questionary>=2.0,<3",
    "rapidfuzz>=3.14.5",
    "typer>=0.12,<1",
    "websockets>=13",
    "wordfreq>=3.1.1",
]

[project.urls]
Homepage = "https://github.com/MaskyS/yutome"
Repository = "https://github.com/MaskyS/yutome"
Issues = "https://github.com/MaskyS/yutome/issues"

[project.optional-dependencies]
ingest = [
    "curl-cffi>=0.11,<0.15",
    "yt-dlp>=2025.6.9",
    "youtube-transcript-api>=1.2",
]
vectors = [
    "lancedb>=0.20",
]
asr = [
    "faster-whisper>=1.1",
]
embeddings = [
    "voyageai>=0.3",
]
gemini = [
    "google-genai>=1.40",
]
mcp = [
    "mcp[cli]>=1.27,<2",
]
http = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]
all = [
    "curl-cffi>=0.11,<0.15",
    "yt-dlp>=2025.6.9",
    "youtube-transcript-api>=1.2",
    "lancedb>=0.20",
    "faster-whisper>=1.1",
    "voyageai>=0.3",
    "google-genai>=1.40",
    "mcp[cli]>=1.27,<2",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

[project.scripts]
yutome = "yutome.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yutome"]

[tool.hatch.build.targets.sdist]
include = [
    "src/yutome",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "cloudflare",
    "docs",
    "data",
    ".env*",
    "*.log",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
