[project]
name = "yutome"
version = "0.1.4"
description = "A local transcript library for the YouTube channels you point at"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kifah Meeran", email = "contact@maskys.com" },
]
keywords = [
    "youtube",
    "knowledge-base",
    "transcripts",
    "search",
    "mcp",
    "rag",
    "local-first",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "curl-cffi>=0.11,<0.15",
    "fastapi>=0.115,<1",
    "faster-whisper>=1.1",
    "google-genai>=1.40",
    "lancedb>=0.20",
    "mcp[cli]>=1.27,<2",
    "pydantic>=2.8,<3",
    "questionary>=2.0,<3",
    "rapidfuzz>=3.14.5",
    "requests>=2.32,<3",
    "typer>=0.12,<1",
    "uvicorn>=0.30,<1",
    "voyageai>=0.3",
    "websockets>=15",
    "wordfreq>=3.1.1",
    "yt-dlp>=2025.6.9",
    "youtube-transcript-api>=1.2",
]

[project.urls]
Homepage = "https://github.com/MaskyS/yutome"
Repository = "https://github.com/MaskyS/yutome"
Issues = "https://github.com/MaskyS/yutome/issues"

[project.scripts]
yutome = "yutome.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yutome"]

[tool.hatch.build.targets.wheel.force-include]
"cloudflare/yutome-capsule/README.md" = "yutome/cloudflare/yutome-capsule/README.md"
"cloudflare/yutome-capsule/package-lock.json" = "yutome/cloudflare/yutome-capsule/package-lock.json"
"cloudflare/yutome-capsule/package.json" = "yutome/cloudflare/yutome-capsule/package.json"
"cloudflare/yutome-capsule/src" = "yutome/cloudflare/yutome-capsule/src"
"cloudflare/yutome-capsule/tsconfig.json" = "yutome/cloudflare/yutome-capsule/tsconfig.json"
"cloudflare/yutome-capsule/wrangler.toml" = "yutome/cloudflare/yutome-capsule/wrangler.toml"

[tool.hatch.build.targets.sdist]
include = [
    "src/yutome",
    "tests",
    "cloudflare/yutome-capsule/README.md",
    "cloudflare/yutome-capsule/package-lock.json",
    "cloudflare/yutome-capsule/package.json",
    "cloudflare/yutome-capsule/src",
    "cloudflare/yutome-capsule/tsconfig.json",
    "cloudflare/yutome-capsule/wrangler.toml",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "docs",
    "data",
    ".env*",
    "*.log",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
